--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,11 @@ jobs:
 
       - name: Set up pmaports
         run: |
-          echo -e '\n\n' | pmbootstrap init || true
-          cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git remote add mainlining https://github.com/mainlining/pmaports.git
-          git fetch mainlining nikroks/alioth
-          git reset --hard mainlining/nikroks/alioth
+           echo -e '\n\n' | pmbootstrap init -m http://dl-cdn.alpinelinux.org/alpine/v3.21/main -c http://dl-cdn.alpinelinux.org/alpine/v3.21/community || true
+           cd ~/.local/var/pmbootstrap/cache_git/pmaports
+           git remote add mainlining https://github.com/mainlining/pmaports.git
+           git fetch mainlining nikroks/alioth
+           git reset --hard mainlining/nikroks/alioth
 
       - name: Clone kernel sources
         run: |
