--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,11 @@ jobs:
 
       - name: Set up pmaports
         run: |
-           echo -e '\n\n' | pmbootstrap init -m http://dl-cdn.alpinelinux.org/alpine/v3.21/main -c http://dl-cdn.alpinelinux.org/alpine/v3.21/community || true
-           cd ~/.local/var/pmbootstrap/cache_git/pmaports
+           echo -e '\n\n' | pmbootstrap init || true
+           REPO_FILE="$HOME/.local/var/pmbootstrap/chroot_xiaomi-alioth/etc/apk/repositories"
+           sed -i 's|http://dl-cdn.alpinelinux.org/alpine/edge/main|http://dl-cdn.alpinelinux.org/alpine/v3.21/main|' "$REPO_FILE"
+           sed -i 's|http://dl-cdn.alpinelinux.org/alpine/edge/community|http://dl-cdn.alpinelinux.org/alpine/v3.21/community|' "$REPO_FILE"
+           cd ~/.local/var/pmbootstrap/cache_git/pmaports || mkdir -p ~/.local/var/pmbootstrap/cache_git/pmaports && cd ~/.local/var/pmbootstrap/cache_git/pmaports
            git remote add mainlining https://github.com/mainlining/pmaports.git
            git fetch mainlining nikroks/alioth
            git reset --hard mainlining/nikroks/alioth
