--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 5' # Run every Friday at midnight
+    - cron: '0 0 * * 5' # Run every friday at midnight
 
 env:
   KERNEL_BRANCH: 6.12.1
@@ -21,25 +21,26 @@ jobs:
 
       - name: Install pmbootstrap from git
         run: |
-          git clone --depth=1 https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
+          git clone --branch 3.3.2 --depth 1 https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
           mkdir -p ~/.local/bin
           ln -s "$PWD/pmbootstrap/pmbootstrap.py" ~/.local/bin/pmbootstrap
           pmbootstrap --version
 
-      - name: Set up pmbootstrap non-interactively
+      - name: Set up pmaports
         run: |
-          cp xiaomi-alioth.cfg ~/.config/pmbootstrap_v3.cfg
-
-      - name: Switch pmaports to jambokill fork
-        run: |
+          echo -e '\n\n' | pmbootstrap init || true
           cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git remote add jambokill https://github.com/jambokill/pmaports.git || true
-          git fetch jambokill
-          git checkout -B alioth jambokill/nikroks/alioth
+          git remote add mainlining https://github.com/mainlining/pmaports.git
+          git fetch mainlining nikroks/alioth
+          git reset --hard mainlining/nikroks/alioth
 
       - name: Clone kernel sources
         run: |
           git clone https://github.com/mainlining/linux.git --single-branch --branch nikroks/alioth --depth 1 ./linux
+
+      - name: Choose any SM8250 device in pmbootstrap to build kernel
+        run: |
+          cp xiaomi-alioth.cfg ~/.config/pmbootstrap_v3.cfg
 
       - name: Compile kernel with envkernel
         run: |
@@ -50,12 +51,15 @@ jobs:
           make -j$(nproc)
           pmbootstrap build --envkernel linux-postmarketos-qcom-sm8250-alioth
 
-      - name: Build xiaomi-alioth rootfs and export
+      - name: Create artifact directory
+        run: |
+          mkdir out
+
+      - name: Build xiaomi-alioth
         run: |
           cp xiaomi-alioth.cfg ~/.config/pmbootstrap_v3.cfg
           pmbootstrap install --password 147147
           pmbootstrap export
-          mkdir -p out
           cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-tianma-alioth.img
           cp /tmp/postmarketOS-export/xiaomi-alioth.img out/rootfs-xiaomi-alioth.img
 
