--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -10,3 +10,5 @@ work = HOME/.local/var/pmbootstrap
 [providers]
 
 [mirrors]
+alpine = https://dl-cdn.alpinelinux.org/alpine/v3.17/
+pmOS = https://mirror.postmarketos.org/postmarketos/v24.12/
