--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -10,5 +10,6 @@ work = HOME/.local/var/pmbootstrap
 [providers]
 
 [mirrors]
-alpine = https://dl-cdn.alpinelinux.org/alpine/v3.17/
+alpine_main = https://dl-cdn.alpinelinux.org/alpine/v3.17/main
+alpine_community = https://dl-cdn.alpinelinux.org/alpine/v3.17/community
 pmOS = https://mirror.postmarketos.org/postmarketos/v24.12/
