--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -4,6 +4,7 @@ device = xiaomi-alioth
 jobs = NPROC
 systemd = never
 ui = phosh
+channel = v24.12
 user = user
 work = HOME/.local/var/pmbootstrap
 
