--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -11,6 +11,5 @@ work = HOME/.local/var/pmbootstrap
 [providers]
 
 [mirrors]
-alpine_main = https://dl-cdn.alpinelinux.org/alpine/v3.17/main
-alpine_community = https://dl-cdn.alpinelinux.org/alpine/v3.17/community
+alpine = https://dl-cdn.alpinelinux.org/alpine/v3.17/
 pmOS = https://mirror.postmarketos.org/postmarketos/v24.12/
