--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -11,5 +11,5 @@ work = HOME/.local/var/pmbootstrap
 [providers]
 
 [mirrors]
-alpine = https://dl-cdn.alpinelinux.org/alpine/v3.17/
+alpine_main = https://dl-cdn.alpinelinux.org/alpine/v3.21/
 pmOS = https://mirror.postmarketos.org/postmarketos/v24.12/
