--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
         run: |
           echo -e '\n\n' | pmbootstrap init || true
           cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git clone --branch v24.12 --depth 1 https://github.com/mainlining/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
- 
+          git clone --branch v24.12 --depth 1 https://gitlab.postmarketos.org/postmarketOS/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
+
       - name: Clone kernel sources
         run: |
           git clone https://github.com/mainlining/linux.git --single-branch --branch nikroks/alioth --depth 1 ./linux
