--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           echo -e '\n\n' | pmbootstrap init || true
           rm -rf ~/.local/var/pmbootstrap/cache_git/pmaports
-          git clone --branch v24.12 --depth 1 https://gitlab.postmarketos.org/postmarketOS/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
+          git clone --branch nikroks/alioth --depth 1 https://github.com/mainlining/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
           cd ~/.local/var/pmbootstrap/cache_git/pmaports
           git status
 
