--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,9 @@ jobs:
         run: |
           echo -e '\n\n' | pmbootstrap init || true
           rm -rf ~/.local/var/pmbootstrap/cache_git/pmaports
-          git clone --branch nikroks/alioth --depth 1 https://github.com/mainlining/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
+          git clone --branch nikroks/alioth https://github.com/mainlining/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
           cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git status
+          git reset --hard origin/nikroks/alioth
 
       - name: Clone kernel sources
         run: |
