--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Set up pmaports
         run: |
           echo -e '\n\n' | pmbootstrap init || true
-          rm -rf ~/.local/var/pmbootstrap/cache_git/pmaports
-          git clone --branch nikroks/alioth https://github.com/mainlining/pmaports.git ~/.local/var/pmbootstrap/cache_git/pmaports
           cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git reset --hard origin/nikroks/alioth
+          git remote add mainlining https://github.com/mainlining/pmaports.git
+          git fetch mainlining nikroks/alioth
+          git reset --hard mainlining/nikroks/alioth
 
       - name: Clone kernel sources
         run: |
