--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,11 @@ jobs:
           git remote add postmarketos https://gitlab.postmarketos.org/postmarketOS/pmaports.git
           git fetch postmarketos v24.12
           git reset --hard postmarketos/v24.12
+          git remote add github https://github.com/mainlining/pmaports.git
+          git fetch github nikroks/alioth
+          git checkout github/nikroks/alioth -- device/testing/device-xiaomi-alioth/
+          git checkout github/nikroks/alioth -- device/testing/firmware-xiaomi-alioth/
+          git checkout github/nikroks/alioth -- device/testing/linux-postmarketos-qcom-sm8250-alioth/
           git status
 
       - name: Clone kernel sources
