--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -4,7 +4,7 @@ device = xiaomi-alioth
 jobs = NPROC
 systemd = never
 ui = phosh
-channels = v24.12
+is_default_channel = False
 user = user
 work = HOME/.local/var/pmbootstrap
 
