--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install pmbootstrap from git
         run: |
-          git clone --branch 3.4.0 --depth 1 https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
+          git clone --depth=1 https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
           mkdir -p ~/.local/bin
           ln -s "$PWD/pmbootstrap/pmbootstrap.py" ~/.local/bin/pmbootstrap
           pmbootstrap --version
@@ -30,15 +30,9 @@ jobs:
         run: |
           echo -e '\n\n' | pmbootstrap init || true
           cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git remote add postmarketos https://gitlab.postmarketos.org/postmarketOS/pmaports.git
-          git fetch postmarketos v24.12
-          git reset --hard postmarketos/v24.12
-          git remote add github https://github.com/mainlining/pmaports.git
-          git fetch github nikroks/alioth
-          git checkout github/nikroks/alioth -- device/testing/device-xiaomi-alioth/
-          git checkout github/nikroks/alioth -- device/testing/firmware-xiaomi-alioth/
-          git checkout github/nikroks/alioth -- device/testing/linux-postmarketos-qcom-sm8250-alioth/
-          git status
+          git remote add mainlining https://github.com/mainlining/pmaports.git
+          git fetch mainlining nikroks/alioth
+          git reset --hard mainlining/nikroks/alioth
 
       - name: Clone kernel sources
         run: |
