--- a/xiaomi-alioth.cfg
+++ b/xiaomi-alioth.cfg
@@ -5,7 +5,8 @@ jobs = NPROC
 systemd = never
 ui = phosh
 is_default_channel = False
-user = user
+timezone = America/Los_Angeles
+user = nyte
 work = HOME/.local/var/pmbootstrap
 
 [providers]
