--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           source ../pmbootstrap/helpers/envkernel.sh
           make defconfig sm8250.config
           make -j$(nproc)
-          pmbootstrap build --envkernel linux-postmarketos-qcom-sm8250-alioth
+          pmbootstrap -v build --envkernel linux-postmarketos-qcom-sm8250-alioth
           pmbootstrap log
 
       - name: Create artifact directory
