--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,19 @@ jobs:
         run: |
           cp xiaomi-alioth.cfg ~/.config/pmbootstrap_v3.cfg
 
+      - name: Install packages manually without pmbootstrap's interference
+        run: |
+         pmbootstrap chroot -- ash -c "
+         apk update
+         apk add \
+            abuild bash bc binutils bison \
+            binutils-aarch64 gcc-aarch64 \
+            diffutils elfutils-dev findutils flex \
+            g++ gcc gmp-dev linux-headers openssl-dev \
+            make musl-dev ncurses-dev perl sed \
+            yamllint yaml-dev xz
+          "
+
       - name: Compile kernel with envkernel
         run: |
           cd linux
