--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Install packages manually without pmbootstrap's interference
         run: |
+         pmbootstrap chroot -- apk add python3 py3-pip
          pmbootstrap chroot -- pip3 install dtschema
 
       - name: Compile kernel with envkernel
