--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install packages manually without pmbootstrap's interference
         run: |
-         pmbootstrap chroot -- apk add python3 py3-pip
+         pmbootstrap chroot -- apk add python3 py3-pip gcc musl-dev python3-dev make
          pmbootstrap chroot -- pip3 install --break-system-packages dtschema
 
       - name: Compile kernel with envkernel
