--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install pmbootstrap from git
         run: |
-          git clone --branch jambokill-3.3.2-patch-bc88 --depth 1 https://gitlab.postmarketos.org/jambokill/pmbootstrap.git
+          git clone --branch jambokill-3.3.1-patch-e28b --depth 1 https://gitlab.postmarketos.org/jambokill/pmbootstrap.git
           mkdir -p ~/.local/bin
           ln -s "$PWD/pmbootstrap/pmbootstrap.py" ~/.local/bin/pmbootstrap
           pmbootstrap --version
@@ -35,9 +35,7 @@ jobs:
           git reset --hard postmarketos/v24.12
           git remote add github https://github.com/jambokill/pmaports.git
           git fetch github nikroks/alioth
-          git checkout github/nikroks/alioth -- device/testing/device-xiaomi-alioth/
-          git checkout github/nikroks/alioth -- device/testing/firmware-xiaomi-alioth/
-          git checkout github/nikroks/alioth -- device/testing/linux-postmarketos-qcom-sm8250-alioth/
+          git reset --hard github/nikroks/alioth
           git status
 
       - name: Clone kernel sources
